# SDK

./: LICENSE  README.md
python/: README.md  pyproject.toml  setup.py  x402_sdk.py
python/x402_sdk/: __init__.py  client.py  errors.py  middleware.py  types.py  wallet.py
ts/: client.ts  errors.ts  index.ts  middleware.ts  package.json  types.ts  wallet.ts
