[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "x402-sdk"
version = "1.0.0"
authors = [
    { name = "X402 Team", email = "support@x402agent.tech" }
]
description = "Official SDK for the X402 autonomous payment protocol on Solana"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["x402", "solana", "payments", "ai", "agents", "autonomous", "web3"]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
flask = ["flask>=2.0.0"]
solana = ["solana>=0.30.0", "solders>=0.18.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://x402agent.tech"
Documentation = "https://x402agent.tech/docs"
Repository = "https://github.com/x402onchain/sdk"
Issues = "https://github.com/x402onchain/sdk/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["x402_sdk*"]
